Updated Chinese (Traditional Han script) translation using Weblate
Currently translated at 100.0% (262 of 262 strings)

Translated using Weblate (Chinese (Traditional Han script))

Currently translated at 100.0% (207 of 207 strings)

Co-authored-by: hanyang cheng <cinxiafortis@tutanota.de>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/zh_Hant/
Translate-URL: https://hosted.weblate.org/projects/feeder/f-droid-and-play-store-metadata/zh_Hant/
Translation: Feeder/Android strings
Translation: Feeder/F-Droid and Play Store metadata

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_settings">設置</string>
-    <string name="navigation_drawer_close">關閉導航菜單</string>
-    <string name="navigation_drawer_open">打開導航菜單</string>
-    <string name="may_result_data_charges">可能會產生移動數據費用。</string>
-    <string name="show_thumbnails">顯示縮略圖</string>
+    <string name="navigation_drawer_close">關閉導航選單</string>
+    <string name="navigation_drawer_open">打開導航選單</string>
+    <string name="may_result_data_charges">可能會產生行動數據費用。</string>
+    <string name="show_thumbnails">顯示縮圖</string>
     <string name="only_on_wifi">僅在 Wi-Fi 上</string>
     <string name="synchronization">同步中</string>
     <string name="sync_option_every_day">每天</string>
@@ -36,7 +36,7 @@
     <string name="show_unread_items">顯示未讀內容</string>
     <string name="show_all_items">顯示所有內容</string>
     <string name="delete_feed">刪除訂閱</string>
-    <string name="edit_feed">更改訂閱</string>
+    <string name="edit_feed">編輯訂閱</string>
     <string name="mark_all_as_read">全部標記為已讀</string>
     <string name="mark_as_unread">標記為未讀</string>
     <string name="mark_as_read">標記為已讀</string>
@@ -60,8 +60,8 @@
     <string name="only_when_charging">只有在充電時</string>
     <string name="open_in_default_browser">預設瀏覽器</string>
     <string name="sort">以…排序</string>
-    <string name="send_bug_report">回報臭蟲</string>
-    <string name="touch_to_play_video">觸碰後播放影片</string>
+    <string name="send_bug_report">回報錯誤</string>
+    <string name="touch_to_play_video">點擊播放影片</string>
     <string name="mark_items_above_as_read">以上標記為已讀</string>
     <string name="sort_newest_first">新文章優先</string>
     <string name="sort_oldest_first">舊文章優先</string>
@@ -150,7 +150,7 @@
     <string name="device_sync_description_1">跨裝置同步允許你在不同的裝置上同步訂閱及閱讀的文章。</string>
     <string name="scan_or_enter_code">掃描或輸入同步代碼</string>
     <string name="start_new_sync_chain">開啟新的同步鏈</string>
-    <string name="feeder_device_sync_code">Feed 裝置同步代碼</string>
+    <string name="feeder_device_sync_code">Feeder 裝置同步代碼</string>
     <string name="sync_code">同步代碼</string>
     <string name="or_open_device_sync_link">或著，在你的裝置上打開此連結。</string>
     <string name="use_detect_language">偵測語言</string>
@@ -219,4 +219,46 @@
     <string name="http_error">HTTP 錯誤</string>
     <string name="few_minutes">%1$s 分鐘</string>
     <string name="show_reading_time">顯示預計閱讀時間</string>
+    <string name="import_x_feeds_with_y_tags">是否導入 %1$s 個具有 %2$s 個標籤的訂閱源？</string>
+    <string name="notification_channel_description">僅針對已配置訂閱中的未讀內容發送通知</string>
+    <string name="only_enable_for_bad_id_feeds">僅對有損壞 ID 的訂閱啟用</string>
+    <string name="block_list">封鎖列表</string>
+    <string name="discovered_feeds_list">已探索的訂閱列表</string>
+    <string name="toggle_tag_expansion">展開 / 收回標籤</string>
+    <string name="sync_to_fetch">同步以獲取文章</string>
+    <string name="failed_to_export_saved_articles">未能輸出已儲存的文章</string>
+    <string name="mark_as_read_on_scroll">隨滾動標記為已讀</string>
+    <string name="no_feeds">沒有訂閱源</string>
+    <string name="zero_feeds">%1$s 個訂閱源</string>
+    <string name="one_feed">%1$s 個訂閱源</string>
+    <string name="two_feeds">%1$s 個訂閱源</string>
+    <string name="few_feeds">%1$s 個訂閱源</string>
+    <string name="many_feeds">%1$s 個訂閱源</string>
+    <string name="other_feeds">%1$s 個訂閱源</string>
+    <string name="failed_to_fetch_full_article_missing_body">找不到能獲取的東西</string>
+    <string name="failed_to_fetch_full_article_missing_link">訂閱中缺少文章連結</string>
+    <string name="no_body_in_response">沒有回應</string>
+    <string name="include_mobile_hotspots">包括行動熱點</string>
+    <string name="permission_read_desc">允許應用讀取訂閱源和文章</string>
+    <string name="permission_read_label">Feeder 唯讀權限</string>
+    <string name="open_feed">打開訂閱</string>
+    <string name="show_message">顯示訊息</string>
+    <string name="no_feeds_in_the_page">頁面中無訂閱源</string>
+    <string name="failed_to_parse_rss_feed">RSS 源解析失敗</string>
+    <string name="failed_to_parse_json_feed">JSON 源解析失敗</string>
+    <string name="open_drawer_on_fab">將所有文章標為已讀並顯示訂閱源</string>
+    <string name="feed_item_style_compact_card">緊湊卡片</string>
+    <string name="read_adjective">已讀</string>
+    <string name="summarize">概述</string>
+    <string name="openai_settings">OpenAI 整合</string>
+    <string name="touch_to_play_audio">點擊播放音訊</string>
+    <string name="azure_deployment_id">Azure 部署 ID</string>
+    <string name="azure_api_version">Azure API 版本</string>
+    <string name="generate_extra_unique_ids">産生附加的唯一 ID</string>
+    <string name="api_key">API 密鑰</string>
+    <string name="model_id">模型 ID</string>
+    <string name="show_title_unread_count">在標題中顯示未讀文章數量</string>
+    <string name="unable_to_load_models">無法載入模型。</string>
+    <string name="no_models_were_found">沒有找到模型</string>
+    <string name="list_of_available_models">可用模型清單</string>
 </resources>
