--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -45,6 +45,7 @@
     <string name="all_feeds">Kaikki syötteet</string>
     <string name="sync_option_manually">Manuaalisesti</string>
     <string name="sync_option_every_15min">15 minuutin välein</string>
+    <string name="sync_option_every_5min">5 minuutin välein</string>
     <string name="sync_option_every_30min">30 minuutin välein</string>
     <string name="sync_option_every_hour">1 tunnin välein</string>
     <string name="sync_option_every_3_hours">3 tunnin välein</string>
