--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -43,6 +43,7 @@
     <string name="sync_option_every_3_hours">Kas 3 valandas</string>
     <string name="sync_option_every_30min">Kas 30 minučių</string>
     <string name="sync_option_every_15min">Kas 15 minučių</string>
+    <string name="sync_option_every_5min">Kas 5 minučių</string>
     <string name="nothing_to_display">Nėra ką rodyti!</string>
     <string name="view_debug_log">Peržiūrėti derinimo žurnalą</string>
     <string name="open_in_browser">Atidaryti interneto naršyklėje</string>
