--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="sync_option_every_15min">ప్రతి 15 నిమిషాలకు</string>
+    <string name="sync_option_every_5min">ప్రతి 5 నిమిషాలకు</string>
     <string name="nothing_to_display">ప్రదర్శించడానికి ఏమీ లేదు!</string>
     <string name="save">సేవ్ చేయండి</string>
     <string name="failed_to_parse_full_article">పూర్తి కథనాన్ని అన్వయించడంలో విఫలమైంది</string>
