--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -99,7 +99,7 @@
     <string name="battery_optimization">Ŝparado de baterio</string>
     <string name="javascript">JavaScript</string>
     <string name="open_in_webview">Retvidigilo</string>
-    <string name="url">URL</string>
+    <string name="url_or_uri">URL</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="failed_to_load_text_to_speech">Ne eblis ŝargi tekston al parolado</string>
