--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Ajustes</string>
     <string name="add_feed">Añadir canal</string>
     <string name="title_activity_edit_feed">Suscríbete al canal RSS</string>
-    <string name="url">Dirección URL</string>
+    <string name="url_or_uri">Dirección URL</string>
     <string name="tag">Etiqueta</string>
     <string name="add_feed_search_hint">Dirección del canal RSS</string>
     <string name="title">Título</string>
@@ -136,7 +136,7 @@
     <string name="only_enable_for_bad_id_feeds">Habilitar solo para orígenes con identificadores incorrectos</string>
     <string name="sync_status">Estado de sincronización</string>
     <string name="syncing">Sincronizando</string>
-    <string name="invalid_url">URL no válida</string>
+    <string name="invalid_url_or_uri">URL no válida</string>
     <string name="failed_to_import_OPML">Fallo al importar OPML</string>
     <string name="failed_to_export_OPML">Fallo al exportar OPML</string>
     <string name="failed_to_open_article">No se pudo abrir el artículo</string>
