--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -10,7 +10,7 @@
     <string name="title">Naam</string>
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
-    <string name="url">URL</string>
+    <string name="url_or_uri">URL</string>
     <string name="search_feed_empty_hint">Een feedadres invoeren</string>
     <string name="mark_as_read">Als gelezen markeren</string>
     <string name="edit_feed">Feed bewerken</string>
@@ -98,7 +98,7 @@
     <string name="feed_item_style_compact">Compact</string>
     <string name="feed_item_style">Opmaak van artikel</string>
     <string name="generate_extra_unique_ids">Genereer extra unieke ID\'s</string>
-    <string name="invalid_url">Geen geldige URL</string>
+    <string name="invalid_url_or_uri">Geen geldige URL</string>
     <string name="failed_to_import_OPML">OPML-import mislukt</string>
     <string name="feed_item_style_super_compact">Super compact</string>
     <string name="only_enable_for_bad_id_feeds">Alleen voor feeds met slechte ID\'s</string>
