--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -96,7 +96,7 @@
     <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
     <string name="javascript">JavaScript</string>
     <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
-    <string name="url">URL</string>
+    <string name="url_or_uri">URL</string>
     <string name="failed_to_parse">Não foi possível analisar %1$s</string>
     <string name="use_app_default">Usar app padrão</string>
     <string name="failed_to_load_text_to_speech">Não foi possível carregar o texto para fala</string>
@@ -136,7 +136,7 @@
     <string name="showing_only_unread_articles">Mostrar somente artigos não lidos</string>
     <string name="generate_extra_unique_ids">Gerar IDs únicos extra</string>
     <string name="expanded_tag">Abrir categoria</string>
-    <string name="invalid_url">Não é uma URL válida</string>
+    <string name="invalid_url_or_uri">Não é uma URL válida</string>
     <string name="failed_to_import_OPML">Falha ao importar OPML</string>
     <string name="failed_to_export_OPML">Falha ao exportar OPML</string>
     <string name="failed_to_open_article">Não foi possível abrir o artigo</string>
