--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">设置</string>
     <string name="add_feed">添加订阅</string>
     <string name="title_activity_edit_feed">订阅 Feed</string>
-    <string name="url">URL</string>
+    <string name="url_or_uri">URL</string>
     <string name="tag">标签</string>
     <string name="add_feed_search_hint">订阅 URL</string>
     <string name="title">标题</string>
@@ -136,7 +136,7 @@
     <string name="only_enable_for_bad_id_feeds">只对坏 ID 源启用</string>
     <string name="syncing">同步中</string>
     <string name="sync_status">同步状态</string>
-    <string name="invalid_url">无效 URL</string>
+    <string name="invalid_url_or_uri">无效 URL</string>
     <string name="failed_to_import_OPML">导入 OPML 失败</string>
     <string name="failed_to_export_OPML">导出 OPML 失败</string>
     <string name="failed_to_open_article">打不开文章</string>
