--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
   <string name="action_settings">Settings</string>
   <string name="add_feed">Add feed</string>
   <string name="title_activity_edit_feed">Subscribe to feed</string>
-  <string name="url">URL</string>
+  <string name="url_or_uri">URL/URI</string>
   <string name="tag">Tag</string>
-  <string name="add_feed_search_hint">Feed URL</string>
+  <string name="add_feed_search_hint">Feed URL/URI</string>
   <string name="title">Title</string>
+  <string name="nostr_feed_description">Nostr articles by %1$s</string>
 
   <string name="by_author_on_date" comment="1 is the author, 2 is the date. So the default format will be shown as&#10;&#10;John Smith, Saturday, 9 January 2021 15:49&#10;&#10;if better for other language, it can be changed. For example &#10;&#10;%1$s on %2$s:&#10;&#10;John Smith on Saturday, 9 January 2021 15:49">%1$s, %2$s</string>
   <string name="on_date" comment="1 is the date. Used in the feed view.">%1$s</string>
@@ -162,7 +163,7 @@
   <string name="feed_item_style_super_compact">Super compact</string>
   <string name="generate_extra_unique_ids">Generate extra unique IDs</string>
   <string name="only_enable_for_bad_id_feeds">Only enable for feeds with bad IDs</string>
-  <string name="invalid_url">Not a valid URL</string>
+  <string name="invalid_url_or_uri">Not a valid URL/URI</string>
   <string name="failed_to_import_OPML">"Failed to import OPML"</string>
   <string name="failed_to_export_OPML">"Failed to export OPML"</string>
   <string name="failed_to_export_saved_articles">"Failed to export saved articles"</string>
